--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <h1>院内ミーティング</h1>
-
+<div>
+    <a href="logout">ログアウト</a>
+</div>
 <div name="newPostWrapper" style="display:none" id="newPostWrapper">
     <a href="javascript:void(0)" name="newPostLink">新規投稿</a>
     <div id="newPostWorkarea" style="display:none">
