--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>院内ミーティング</h1>
 <div>
-    <a href="logout">ログアウト</a>
+    ユーザー名：（<span id="user-name"></span>） <a href="logout">ログアウト</a>
 </div>
 <div name="newPostWrapper" style="display:none" id="newPostWrapper">
     <a href="javascript:void(0)" name="newPostLink">新規投稿</a>
@@ -21,8 +21,9 @@
         </div>
     </div>
 </div>
-<div id="upperNav"></div>
+<div class="nav"></div>
 <div id="postListWrapper"></div>
+<div class="nav"></div>
 <script src="bundle.js"></script>
 </body>
 </html>
