--- a/static/login.html
+++ b/static/login.html
@@ -26,7 +26,7 @@
             <tbody>
             <tr>
                 <td>ユーザー名：</td>
-                <td><input name="name"></td>
+                <td><input name="name" autofocus></td>
             </tr>
             <tr>
                 <td>パスワード：</td>
